Code cleanups:   * Lots of minor code cleanups found using the PMD tool.
git-svn-id: https://jamwiki.svn.sourceforge.net/svnroot/jamwiki/wiki/trunk@1453 f65b7e76-0091-dd46-87ae-4bc0c949c03e